Resolved an issue that caused modals to be off-center

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ a:hover {
 
 body {
     margin: 0;
-    display: flex;
+    /* display: flex; */ /* disabled because it threw Mantine modals off-center */
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
